# voicesmith

./: .gitignore  .gitmodules
voicesmith/: settings.gradle
voicesmith/app/: build.gradle
voicesmith/app/src/androidTest/java/de/jurihock/voicesmith/services/: MockableServiceTestCase.java
voicesmith/app/src/main/: AndroidManifest.xml
voicesmith/app/src/main/cpp/: CMakeLists.txt
voicesmith/app/src/main/java/de/jurihock/voicesmith/: Utils.java
voicesmith/app/src/main/res/drawable/: action_bar_colorstrip.xml  action_bar_tint.xml
voicesmith/app/src/main/res/values/: gd_colors.xml  theme.xml
voicesmith/gradle/wrapper/: gradle-wrapper.properties
